--- a/index.html
+++ b/index.html
@@ -167,14 +167,15 @@
             <div class="title">Q-resafe</div>
             <div class="subtitle">
                 Assessing Safety Risks and Quantization-aware Safety Patching for <br>
-                Quantized Large Language Models
+                Quantized Large Language Models <br>
+                (ICML 2025)
             </div>
             <div class="authors">
                 <span class="author1">Kejia Chen<sup class="author-star">1 2*</sup></span>
                 <span class="author2">Jiawen Zhang<sup class="author-star">1 2*</sup></span>
                 <span class="author3">Jiacong Hu<sup class="author-star">1</sup></span>
                 <span class="author4">Yu Wang<sup class="author-star">1</sup></span>
-                <span class="author5">Jian Lo<sup class="author-star">3†</sup></span>
+                <span class="author5">Jian Lou<sup class="author-star">3†</sup></span>
                 <span class="author6">Zunlei Feng<sup class="author-dagger">1 2†</sup></span>
                 <span class="author7">Mingli Song<sup class="author-dagger">1 2</sup></span>
             </div>
